--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 API_URL = /api/v1
-CONNECTION_STRING = mongodb+srv://anshika17:admin123@cluster0.dctk8v8.mongodb.net/Reverie?retryWrites=true&w=majority&appName=Cluster0
+CONNECTION_STRING = mongodb+srv://<username>:<password>@cluster0.dctk8v8.mongodb.net/<databasename>?retryWrites=true&w=majority&appName=Cluster0
